--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
+spring.datasource.url=jdbc:mysql://localhost:3306/amazon_shopping
 spring.datasource.username=dileep
 spring.datasource.password=143Dileep@sit
 spring.jpa.generate-ddl=true
