--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/amazon_shopping
 spring.datasource.username=dileep
 spring.datasource.password=143Dileep@sit
 spring.jpa.generate-ddl=true
+
+
+spring.jpa.show-sql=true
