OAuth2 is using now....

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,16 @@ spring.jpa.generate-ddl=true
 
 
 spring.jpa.show-sql=true
+
+security.oauth2.client.clientId = 1020018587590-69hmukuslcp29i0irmi71ccnpm8jrgm6.apps.googleusercontent.com
+security.oauth2.client.clientSecret = 0bpR4tMaRw4b51C-EagxgkhS
+security.oauth2.client.accessTokenUri  =  https://www.googleapis.com/oauth2/v3/token
+security.oauth2.client.userAuthorizationUri  =  https://accounts.google.com/o/oauth2/auth
+security.oauth2.client.tokenName = oauth_token
+security.oauth2.client.authenticationScheme = query
+security.oauth2.client.clientAuthenticationScheme = form
+security.oauth2.client.scope = profile email
+
+security.oauth2.resource.userInfoUri  =  https://www.googleapis.com/userinfo/v2/me
+security.oauth2.resource.preferTokenInfo = false
+
