JWT is implemented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/amazon_shopping
 spring.datasource.username=dileep
 spring.datasource.password=143Dileep@sit
 spring.jpa.generate-ddl=true
+jwt.secret=ymedialabs
 
 
 spring.jpa.show-sql=true
